[project]
name = "pytorch"
version = "0.1.0"
description = ""
authors = [
    {name = "Bruno Goncalves",email = "bgoncalves@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ipython (>=9.0.0,<10.0.0)",
    "matplotlib (>=3.10.1,<4.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "numpy (>=2.2.3,<3.0.0)",
    "torch (>=2.6.0,<3.0.0)",
    "watermark (>=2.5.0,<3.0.0)",
    "tqdm (>=4.67.1,<5.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
